--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
+body{
+    margin:0;
+}
+.border-add{
+    border-left:5px solid yellowgreen;
+    
+}
 .first-section{
     display:flex;
     margin-right: 200px;
     margin-left: 300px;
-    margin-top:200px;
+    margin-top:100px;
+}
+.span-one{
+    color:orange;
 }
 .div-son h1{
     font-size: 80px;
@@ -38,7 +48,7 @@
 .son-div-one{
     height: 400px;
     width:350px;
-    background-color: green;
+    background-color: rgb(204, 221, 204);
     margin-right:30px;
     border-radius: 30px;
     padding: 30px;
@@ -47,7 +57,7 @@
 .son-div-two{
     height: 400px;
     width:350px;
-    background-color: brown;
+    background-color:rgb(220, 220, 238);
     margin-right:30px;
     border-radius: 30px;
     padding: 30px;
@@ -56,7 +66,7 @@
 .son-div-three{
     height:400px;
     width: 350px;
-    background-color: darkmagenta;
+    background-color:rgb(241, 233, 222);
     border-radius: 30px;
     padding: 30px;
     font-size: 20px;
@@ -72,7 +82,6 @@
     margin-left:300px;
     margin-top:100px;
     font-family:Arial, Helvetica, sans-serif;
-    
 }
 .second-img{
     width:500px;
@@ -101,4 +110,31 @@
 .son-div-sec-for{
     font-size: 30px;
 }
+.link-button{
+    background-color: yellowgreen;
+    padding:20px;
+    border-radius: 15px;
+    text-decoration: none;
+    color:white;
+    margin-top:30px;
+}
+.last-div{
+    background-color: black;
+    color:white;
+    text-align: center;
+    height:250px;
+    padding-top: 40px;
+}
+.last-div p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+.last-div h2{
+    font-style: oblique;
+    font-size: 50px;
+}
+.last-span{
+    color:yellowgreen;
+}
+
 
