--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin:0;
 }
 .border-add{
-    border-left:5px solid yellowgreen;
+    border-left:5px solid rgb(255, 102, 153);
     
 }
 .first-section{
@@ -12,35 +12,33 @@ body{
     margin-top:100px;
 }
 .span-one{
-    color:orange;
+    color:rgb(12, 197, 221);
 }
 .div-son h1{
     font-size: 80px;
     font-family: 'Acme', sans-serif;
-    
 }
 .son-div{
     margin-left:50px ;
 }
 .div-son{
-
     margin-right:200px;
     font-size: 25px;
 }
+
 .another-div{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .second-sec{
     margin-top: 70px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .first-img{
     width:450px;
 }
 .parents-div-one{
     display: flex;
-    margin-left: 300px;
-    
+    margin-left: 300px;  
 }
 .illus-photo{
     width:200px;
@@ -74,14 +72,17 @@ body{
 .second-sec-heading{
     text-align: center;
     margin-bottom: 100px;
-    font-size: 60px;
-    
+    font-size: 60px;   
 }
 .section-three{
     display:flex;
     margin-left:300px;
     margin-top:100px;
     font-family:Arial, Helvetica, sans-serif;
+    background-image: url(pictures/dream-bg.png);
+    background-position:right;
+    background-size: 200px;
+    background-repeat: no-repeat;
 }
 .second-img{
     width:500px;
@@ -91,7 +92,6 @@ body{
     font-size: 30px;
     padding-left: 30px;
     margin-right:200px
-
 }
 .theird-img{
     width:500px;
@@ -102,7 +102,6 @@ body{
     margin-left: 300px;
     margin-top:100px;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 .son-div-sec-four{
     margin-left: 80px;
@@ -111,12 +110,23 @@ body{
     font-size: 30px;
 }
 .link-button{
-    background-color: yellowgreen;
-    padding:20px;
+    background-color:rgb(255, 102, 153);
+    padding:10px;
     border-radius: 15px;
     text-decoration: none;
     color:white;
     margin-top:30px;
+}
+.section-five{
+    display:flex;
+    margin-top:100px;
+    background-image: url(pictures/exp-bg.png);
+    background-position:left;
+    background-size: 100px;
+    background-repeat: no-repeat;
+}
+.section-six{
+    margin-top:150px;
 }
 .last-div{
     background-color: black;
@@ -134,7 +144,20 @@ body{
     font-size: 50px;
 }
 .last-span{
-    color:yellowgreen;
+    color:rgb(255, 102, 153);
 }
-
-
+.span-again{
+    color:rgb(12, 197, 221);
+}
+.divfive{
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 70px;
+}
+.divfive-second{
+    margin-right: 150px;
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top:50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
